--- a/css/global.css
+++ b/css/global.css
@@ -34,6 +34,19 @@ a:hover {
   padding-left: 1.4rem;
   padding-right: 1.4rem;
 }
+.button2 {
+  
+  text-transform: none;
+  font-weight: 500;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  color: black;
+  font-size: 15pt;
+  text-decoration: none;
+
+}
 
 .button-primary {
   background-color: var(--primary);
